--- a/TietoVisa/Base.lproj/Main.storyboard
+++ b/TietoVisa/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hW8-t3-x7r">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PostCell" id="NNB-SI-efw">
@@ -83,7 +83,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2rN-I9-Ox2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="792.95352323838085"/>
+            <point key="canvasLocation" x="-295" y="644"/>
         </scene>
         <!--Compose View Controller-->
         <scene sceneID="Dk9-Q2-aWK">
@@ -352,11 +352,12 @@
                         <outlet property="signInLabel" destination="Y0e-Cd-jyN" id="f96-wi-5Rs"/>
                         <outlet property="signInSelector" destination="cep-iD-xeO" id="t23-NB-kmp"/>
                         <segue destination="UVd-F5-7Bs" kind="show" identifier="goToHome" id="4wv-QU-5at"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="goToGame" id="hl1-Nd-npS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qvV-bS-nxH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-638" y="793"/>
+            <point key="canvasLocation" x="-54" y="1474"/>
         </scene>
         <!--Game Screen View Controller-->
         <scene sceneID="IoN-tz-pMK">
@@ -475,4 +476,7 @@
     <resources>
         <image name="2000px-HILLBLU_button_background" width="1000" height="500"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="hl1-Nd-npS"/>
+    </inferredMetricsTieBreakers>
 </document>
