nyt toimii myös UID:n näyttö SEKÄ tallennuksen yhteydessä UID tallentuu tietokantaan

--- a/TietoVisa/Base.lproj/Main.storyboard
+++ b/TietoVisa/Base.lproj/Main.storyboard
@@ -142,7 +142,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WXI-29-ZiX" userLabel="vaaraVastaus4">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WXI-29-ZiX" userLabel="vaaraVastaus3">
                                 <rect key="frame" x="16" y="369" width="343" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -178,20 +178,14 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sini" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ccp-CS-mAt">
-                                <rect key="frame" x="21" y="404" width="333" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="false" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsw-4o-5Tf">
-                                <rect key="frame" x="16" y="430" width="343" height="21"/>
+                                <rect key="frame" x="16" y="404" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9jX-ch-dpW" userLabel="kategoriaValikko">
-                                <rect key="frame" x="16" y="456" width="343" height="216"/>
+                                <rect key="frame" x="16" y="430" width="343" height="216"/>
                                 <connections>
                                     <outlet property="dataSource" destination="tm8-pJ-PDo" id="Sca-qZ-6ZV"/>
                                 </connections>
@@ -200,11 +194,10 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="WLi-Uy-MtM" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="01a-pt-Hr5"/>
+                            <constraint firstItem="qsw-4o-5Tf" firstAttribute="top" secondItem="WXI-29-ZiX" secondAttribute="bottom" constant="5" id="0tN-k5-0PY"/>
                             <constraint firstItem="WLi-Uy-MtM" firstAttribute="top" secondItem="d7H-bO-qyk" secondAttribute="bottom" constant="5" id="0tR-2F-2UC"/>
                             <constraint firstItem="krT-if-sKC" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="19a-FQ-j1a"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Ccp-CS-mAt" secondAttribute="trailing" constant="5" id="3A5-SH-hhb"/>
                             <constraint firstItem="ToU-7B-xDv" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leading" id="5pk-PB-jAG"/>
-                            <constraint firstItem="qsw-4o-5Tf" firstAttribute="top" secondItem="Ccp-CS-mAt" secondAttribute="bottom" constant="5" id="8IV-Lg-obV"/>
                             <constraint firstAttribute="trailing" secondItem="ToU-7B-xDv" secondAttribute="trailing" id="AMO-oq-mRK"/>
                             <constraint firstItem="Gx7-ee-e72" firstAttribute="top" secondItem="krT-if-sKC" secondAttribute="bottom" constant="5" id="ARx-ds-lGd"/>
                             <constraint firstItem="JM6-Ht-d5Z" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="Avc-6Z-E05"/>
@@ -229,7 +222,6 @@
                             <constraint firstAttribute="trailingMargin" secondItem="WLi-Uy-MtM" secondAttribute="trailing" id="ajQ-yG-Bk4"/>
                             <constraint firstAttribute="trailingMargin" secondItem="JM6-Ht-d5Z" secondAttribute="trailing" id="ekf-HS-C0b"/>
                             <constraint firstItem="fGX-b4-I4T" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="hrb-Bd-JoP"/>
-                            <constraint firstItem="Ccp-CS-mAt" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" constant="5" id="iwF-ML-Xai"/>
                             <constraint firstAttribute="trailingMargin" secondItem="d7H-bO-qyk" secondAttribute="trailing" id="jfe-UP-tCR"/>
                             <constraint firstAttribute="trailingMargin" secondItem="fGX-b4-I4T" secondAttribute="trailing" id="oSF-tL-L01"/>
                             <constraint firstItem="W08-iw-fWS" firstAttribute="leading" secondItem="SHv-us-3XO" secondAttribute="leadingMargin" id="qTD-8S-fox"/>
@@ -237,7 +229,6 @@
                             <constraint firstItem="krT-if-sKC" firstAttribute="top" secondItem="fGX-b4-I4T" secondAttribute="bottom" constant="5" id="riq-al-xAA"/>
                             <constraint firstItem="ToU-7B-xDv" firstAttribute="top" secondItem="3Xe-xv-hI7" secondAttribute="bottom" id="tIK-LZ-WJ6"/>
                             <constraint firstItem="JM6-Ht-d5Z" firstAttribute="top" secondItem="Gx7-ee-e72" secondAttribute="bottom" constant="5" id="u9Q-sW-CbJ"/>
-                            <constraint firstItem="Ccp-CS-mAt" firstAttribute="top" secondItem="WXI-29-ZiX" secondAttribute="bottom" constant="5" id="wcf-Ve-9xE"/>
                             <constraint firstAttribute="trailingMargin" secondItem="krT-if-sKC" secondAttribute="trailing" id="xGU-pd-3cR"/>
                             <constraint firstItem="85J-jZ-oTR" firstAttribute="top" secondItem="W08-iw-fWS" secondAttribute="bottom" constant="5" id="yX1-Ew-Fta"/>
                             <constraint firstItem="W08-iw-fWS" firstAttribute="top" secondItem="ToU-7B-xDv" secondAttribute="bottom" constant="5" id="zac-qd-doo"/>
@@ -247,7 +238,6 @@
                         <outlet property="Picker1" destination="9jX-ch-dpW" id="y4p-Nt-pdO"/>
                         <outlet property="kysymysTextField" destination="85J-jZ-oTR" id="mQc-h3-cMr"/>
                         <outlet property="oikeaVastausTextField" destination="fGX-b4-I4T" id="KBM-1R-tTS"/>
-                        <outlet property="userLabel" destination="Ccp-CS-mAt" id="lUv-0I-hWI"/>
                         <outlet property="vaaraVastaus1TextField" destination="Gx7-ee-e72" id="rqA-ki-EEi"/>
                         <outlet property="vaaraVastaus2TextField" destination="d7H-bO-qyk" id="0rP-2c-U2w"/>
                         <outlet property="vaaraVastaus3TextField" destination="WXI-29-ZiX" id="ndX-BU-9Fs"/>
